--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,16 +1,26 @@
-# Ignore node_modules
-node_modules/
-
-# Ignore environment files
-.env
-
-# Ignore logs and temp files
+# Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# Ignore system files
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.env
