--- a/frontend/app.json
+++ b/frontend/app.json
@@ -21,10 +21,7 @@
     "android": {
       "permissions": [
         "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION",
-        "ACCESS_BACKGROUND_LOCATION",
-        "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION",
+        "ACCESS_COARSE_LOCATION", 
         "ACCESS_BACKGROUND_LOCATION"
       ],
       "adaptiveIcon": {
@@ -60,6 +57,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "6bf7f90d-fead-49ce-872e-856194e8af52"
+      }
     }
   }
 }
