--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "main": "expo-router/entry",
+  "main": "expo/AppEntry.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -11,47 +11,49 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
-    "expo": "^54.0.16",
-    "expo-blur": "^15.0.7",
-    "expo-constants": "~18.0.9",
-    "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "^3.0.10",
-    "expo-linear-gradient": "^15.0.7",
-    "expo-linking": "~8.0.8",
-    "expo-location": "^19.0.7",
-    "expo-router": "^6.0.13",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.8",
-    "lottie-ios": "^4.5.1",
-    "lottie-react-native": "^7.3.4",
-    "nativewind": "^4.2.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@xmldom/xmldom": "^0.8.11",
+    "expo": "~51.0.21",
+    "expo-blur": "~13.0.2",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~13.0.3",
+    "expo-haptics": "~13.0.1",
+    "expo-image": "~1.12.12",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
+    "expo-router": "~3.5.18",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-symbols": "~1.0.0",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.4",
+    "glob": "^9.3.0",
+    "inflight": "^1.0.6",
+    "lodash.get": "^4.4.2",
+    "lottie-react-native": "6.7.2",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "nativewind": "^2.0.11",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
     "react-native-animatable": "^1.4.0",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "1.20.1",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "1.14.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.3.3",
-    "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-web": "~0.19.10",
+    "rimraf": "^4.1.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.14",
-    "@types/react": "~19.1.0",
-    "autoprefixer": "^10.4.21",
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
