--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,15 +1,16 @@
 {
   "expo": {
-    "name": "frontend",
-    "slug": "frontend",
+    "name": "BMS Connect",
+    "slug": "bms-connect",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "frontend",
+    "scheme": "bmsconnect",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
+      "bundleIdentifier": "com.chiranth7.bmsconnect",
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "We need your location to track the bus in real time.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "We need your location to track the bus even in the background."
@@ -22,17 +23,14 @@
       "permissions": [
         "ACCESS_FINE_LOCATION",
         "ACCESS_COARSE_LOCATION", 
-        "ACCESS_BACKGROUND_LOCATION"
+        "ACCESS_BACKGROUND_LOCATION",
+        "INTERNET",
+        "ACCESS_NETWORK_STATE"
       ],
-      "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
-      },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.chiranth7.frontend"
+      "package": "com.chiranth7.bmsconnect",
+      "usesCleartextTraffic": true
     },
     "web": {
       "output": "static",
