--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,25 +12,31 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@maplibre/maplibre-react-native": "^10.4.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/cli": "latest",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "^54.0.16",
+    "@rnmapbox/maps": "^10.2.6",
+    "expo": "^54.0.21",
     "expo-blur": "^15.0.7",
     "expo-constants": "~18.0.9",
+    "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "^3.0.10",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-location": "^19.0.7",
-    "expo-router": "^6.0.13",
+    "expo-notifications": "^0.32.12",
+    "expo-router": "^6.0.14",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-task-manager": "^14.0.8",
     "expo-web-browser": "~15.0.8",
     "glob": "^11.0.3",
     "lottie-ios": "^4.5.1",
